# peertube-viewer-rs

./: .gitignore  .gitlab-ci.yml  Cargo.toml  LICENSE  README.md  TODO.md  build.rs  peertube-viewer-rs.1  peertube-viewer-rs.1.in  peertube-viewer.1
crates/cli-ui/: Cargo.toml
crates/cli-ui/src/: lib.rs
crates/peertube-api/: Cargo.toml
crates/peertube-api/src/: channels.rs  comments.rs  common.rs  error.rs  instance.rs  lib.rs  preloadable.rs  search.rs  trending.rs  video.rs
crates/peertube-api/src/preloadable/: channels.rs  videos.rs
crates/peertube-api/src/search/: channels.rs
crates/peertube-ser/: Cargo.toml
crates/peertube-ser/src/: channels.rs  comments.rs  common.rs  lib.rs  search.rs  video.rs
crates/peertube-viewer-utils/: Cargo.toml
crates/peertube-viewer-utils/src/: lib.rs
crates/preloadable-list/: Cargo.toml
crates/preloadable-list/src/: lib.rs
docs/: book.toml
docs/src/: SUMMARY.md  build.md  changelog.md  config.md  fancy.md  install.md  peertube-viewer-rs.md
docs/src/cli/: args.md  index.md  usage.md
packaging/arch/: deploy.sh  raw_PKGBUILD
scripts/: create-realease-tarbal.sh
src/: cli.rs  config.rs  display.rs  error.rs  history.rs  input.rs  main.rs
src/cli/: clap_app  clap_app.in.yml  clap_app.rs  clap_app.yml  config.rs  default_config.toml  display.rs  frontend_url_parser.rs  full_config.toml  history.rs  input.rs  parser.rs  preloadables.rs
src/cli/config/: frontend_url_parser.rs
src/cli/display/: helpers.rs  layout.rs
src/cli/input/: helper.rs
