[package]
name = "peertube-viewer-rs"
version = "1.8.3"
authors = ["Sosthène Guédon <dev@peertube-viewer.com>"]
edition = "2021"
build = "build.rs"
rust-version = "1.56"

[dependencies]
peertube-api = {version = "*", path = "crates/peertube-api"}
preloadable-list = {version = "*", path = "crates/preloadable-list"}
peertube-viewer-utils = {version = "*", path = "crates/peertube-viewer-utils"}
termion = "1.5.6"
time = { version = "0.3.7", features = ["local-offset", "formatting"] }
rustyline = { version = "9.1.2", default-features = false }
clap = { version = "3.0.14", default-features = false, features = [ "wrap_help", "color", "std", "suggestions"] }
toml = "0.5.8"
unicode-width = "0.1.9"
directories = "4.0.1"
textwrap = "0.14.2"
terminal_size = "0.1.17"
url = "2.2.2"
ureq = "2.4.0"

[workspace]
members = ["crates/peertube-api/", "crates/peertube-ser/", "crates/preloadable-list/", "crates/peertube-viewer-utils/"]

[build-dependencies]
clap = { version = "3.0.14", default-features = false, features = ["suggestions", "std"] }
time = { version = "0.3.7", features = ["local-offset", "parsing", "formatting"] }
clap_complete = "3.0.6"

[profile.release]
lto="fat"
opt-level="s"
