[package]
name = "peertube-api"
version = "0.1.0"
authors = ["Sosthène Guédon <dev@peertube-viewer.com>"]
edition = "2018"

[dependencies]
peertube-ser = {version = "*", path = "../peertube-ser"}
peertube-viewer-utils = {version = "*", path = "../peertube-viewer-utils"}


ureq = "2"
serde_json = "1"
time = "0.3"
