[package]
name = "peertube-ser"
version = "0.1.0"
authors = ["Sosthène Guédon <dev@peertube-viewer.com>"]
edition = "2018"

[dependencies]
serde = { version = "1.0.152", features = ["derive"] }
time = { version = "0.3.20", features = ["parsing"] }

[dev-dependencies]
serde_json = "1.0.93"
pretty_assertions = "1.3.0"
